# StaffEnchanting

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.cmd  fomod.cmake  vcpkg.json
.github/actions/ci/: action.yml
.github/workflows/: build.yml  maintenance.yml
data/: StaffEnchanting.esp
data/Common/: StaffEnchanting.esp
data/Common/Interface/Translations/: StaffEnchanting_ENGLISH.txt
data/Common/SKSE/Plugins/: StaffEnchanting.ini
data/Common/SKSE/Plugins/StaffEnchanting/: StaffEnchanting_Vampirism.json
data/Interface/: StaffCraftingMenu.swf
data/Interface/Translations/: StaffEnchanting_ENGLISH.txt
data/Menu/SkyUI-VR/Interface/: StaffCraftingMenu.swf
data/Menu/SkyUI/Interface/: StaffCraftingMenu.swf
data/Patches/Sorcerer/: StaffEnchantingSorcererPatch.esp
data/fomod/: ModuleConfig.xml  info.xml
docs/schema/: configurationSchema.json
src/Hooks/: BaseCharge.cpp  BaseCharge.h  Create.cpp  Create.h  Workbench.cpp  Workbench.h
src/RE/: Misc.h  Offset.h
src/SKSE/: ScaleformExtendedData.cpp  ScaleformExtendedData.h
src/Settings/: INISettings.cpp  INISettings.h  JSONSettings.cpp  JSONSettings.h
src/UI/: BaseCraftingMenu.h  BaseCraftingMenu.inl  StaffCraftingMenu.CategoryListEntry.cpp  StaffCraftingMenu.CategoryListEntry.h  StaffCraftingMenu.GameDelegate.cpp  StaffCraftingMenu.cpp  StaffCraftingMenu.h  StaffCraftingMenu_Callbacks.cpp  StaffCraftingMenu_Callbacks.h
src/common/: Forms.h  InterfaceStrings.h  PCH.h  forms.h
src/export/: SKSEPlugin.cpp
